# hypernode-core-protocol

./: .gitignore  Anchor.toml  Cargo.toml  IMPLEMENTATION_STATUS.md  MODULAR_ARCHITECTURE.md  README.md  SECURITY-ANTI-SPOOFING.md  package.json
programs/hypernode-jobs/: Cargo.toml
programs/hypernode-jobs/src/: lib.rs
programs/hypernode-nodes/: Cargo.toml
programs/hypernode-nodes/src/: lib.rs
programs/hypernode-nodes/src/instructions/: mod.rs  register.rs
programs/hypernode-nodes/src/state/: node.rs
programs/hypernode-rewards/: Cargo.toml
programs/hypernode-rewards/src/: lib.rs
programs/hypernode-rewards/src/instructions/: claim_rewards.rs  initialize_pool.rs  mod.rs
programs/hypernode-rewards/src/state/: mod.rs  reward_pool.rs
programs/hypernode-staking/: Cargo.toml
programs/hypernode-staking/src/: lib.rs
programs/hypernode-staking/src/instructions/: initialize_config.rs  mod.rs  stake.rs  unstake.rs
programs/hypernode-staking/src/state/: config.rs  mod.rs  stake_account.rs
programs/job-receipt/: Cargo.toml
programs/job-receipt/src/: errors.rs  lib.rs
programs/job-receipt/src/instructions/: assign_job.rs  cancel_job.rs  create_job.rs  mod.rs  settle_job.rs  submit_result.rs
programs/job-receipt/src/state/: job_account.rs  mod.rs
programs/node-registry/: Cargo.toml  Xfn.toml
programs/node-registry/src/: errors.rs  lib.rs  state.rs
programs/payment-splitter/: Cargo.toml
programs/payment-splitter/src/: errors.rs  lib.rs
src/: config.ts  validation.ts
tests/: job-receipt.test.ts  node-registry.test.ts  payment-splitter.test.ts
(+20 files in other folders)
