[workspace]
resolver = "2"
members = [
    "programs/hypernode-nodes",
    "programs/hypernode-jobs",
    "programs/hypernode-staking",
    "programs/hypernode-rewards",
    "programs/node-registry",
    "programs/job-receipt",
    "programs/payment-splitter"
]

[workspace.metadata.cargo-lock]
version = 3

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
