[package]
name = "hypernode-rewards"
version = "0.1.0"
description = "Hypernode rewards program with token reflection distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hypernode_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
