[package]
name = "hypernode-staking"
version = "0.1.0"
description = "Hypernode staking program with xNOS calculation and time multipliers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hypernode_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
